test/cilium/ciliumnetworkpolicy/valid.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
    annotations: {}
    name: test
spec:
    egress:
        - toServices:
            - k8sService:
                namespace: default
                serviceName: kubernetes
    endpointSelector:
        matchLabels:
            app: prometheus
